versions/0.29.0/_sources/refs/_aws-cdk_aws-sns.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"N/pCdLkfZJPGAuPetz49NxlbOvsgi4xSchgyS29QJ+o="}

@aws-cdk/aws-sns
================

.. mdinclude:: ./__aws-cdk_aws-sns.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SNS/0.29.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SNS" Version="0.29.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SNS --version 0.29.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SNS" version="0.29.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/sns/0.29.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:sns:jar:0.29.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="sns" rev="0.29.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>sns</artifactId>
           <version>0.29.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:sns:0.29.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='sns', version='0.29.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sns/v/0.29.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sns@0.29.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sns": "^0.29.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sns@0.29.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-sns/v/0.29.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-sns@0.29.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-sns": "^0.29.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-sns@0.29.0



.. py:module:: @aws-cdk/aws-sns

CfnSubscription
^^^^^^^^^^^^^^^

.. py:class:: CfnSubscription(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnSubscription;

      .. code-tab:: javascript

         const { CfnSubscription } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnSubscription } from '@aws-cdk/aws-sns';



   A CloudFormation `AWS::SNS::Subscription`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html


   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined.
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource.
   :type id: string
   :param props: - resource properties.
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnSubscriptionProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnSubscriptionProps`\  *(readonly)*


   .. py:attribute:: subscriptionArn

      :type: string *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement.



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element.

      

      The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack.



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element.



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete.
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource.

      

      To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types.. . Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value.. . Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property.
      :type propertyPath: string
      :param value: The value.
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource. Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnSubscriptionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnSubscriptionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnSubscriptionProps;

      .. code-tab:: javascript

         // CfnSubscriptionProps is an interface

      .. code-tab:: typescript

         import { CfnSubscriptionProps } from '@aws-cdk/aws-sns';



   Properties for defining a `AWS::SNS::Subscription`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html




   .. py:attribute:: protocol

      `AWS::SNS::Subscription.Protocol`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-protocol


      :type: string *(readonly)*


   .. py:attribute:: topicArn

      `AWS::SNS::Subscription.TopicArn`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#topicarn


      :type: string *(readonly)*


   .. py:attribute:: deliveryPolicy

      `AWS::SNS::Subscription.DeliveryPolicy`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-deliverypolicy


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:attribute:: endpoint

      `AWS::SNS::Subscription.Endpoint`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-endpoint


      :type: string *(optional)* *(readonly)*


   .. py:attribute:: filterPolicy

      `AWS::SNS::Subscription.FilterPolicy`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-filterpolicy


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:attribute:: rawMessageDelivery

      `AWS::SNS::Subscription.RawMessageDelivery`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-rawmessagedelivery


      :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:attribute:: region

      `AWS::SNS::Subscription.Region`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-sns-subscription.html#cfn-sns-subscription-region


      :type: string *(optional)* *(readonly)*


CfnTopic
^^^^^^^^

.. py:class:: CfnTopic(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopic;

      .. code-tab:: javascript

         const { CfnTopic } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnTopic } from '@aws-cdk/aws-sns';



   A CloudFormation `AWS::SNS::Topic`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html


   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined.
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource.
   :type id: string
   :param props: - resource properties.
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnTopicProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnTopicProps`\  *(readonly)*


   .. py:attribute:: topicArn

      :type: string *(readonly)*


   .. py:attribute:: topicName

      :type: string *(readonly)*

   .. py:class:: SubscriptionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SNS;

         .. code-tab:: java

            import software.amazon.awscdk.services.sns.CfnTopic.SubscriptionProperty;

         .. code-tab:: javascript

            // CfnTopic.SubscriptionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopic.SubscriptionProperty } from '@aws-cdk/aws-sns';





      .. py:attribute:: endpoint

         `CfnTopic.SubscriptionProperty.Endpoint`.

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-endpoint


         :type: string *(readonly)*


      .. py:attribute:: protocol

         `CfnTopic.SubscriptionProperty.Protocol`.

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-subscription.html#cfn-sns-topic-subscription-protocol


         :type: string *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement.



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element.

      

      The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack.



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element.



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete.
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource.

      

      To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types.. . Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value.. . Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property.
      :type propertyPath: string
      :param value: The value.
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource. Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnTopicPolicy
^^^^^^^^^^^^^^

.. py:class:: CfnTopicPolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicPolicy;

      .. code-tab:: javascript

         const { CfnTopicPolicy } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { CfnTopicPolicy } from '@aws-cdk/aws-sns';



   A CloudFormation `AWS::SNS::TopicPolicy`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html


   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined.
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource.
   :type id: string
   :param props: - resource properties.
   :type props: :py:class:`~@aws-cdk/aws-sns.CfnTopicPolicyProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-sns.CfnTopicPolicyProps`\  *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement.



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element.

      

      The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack.



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element.



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete.
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource.

      

      To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types.. . Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value.. . Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property.
      :type propertyPath: string
      :param value: The value.
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource. Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnTopicPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTopicPolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicPolicyProps;

      .. code-tab:: javascript

         // CfnTopicPolicyProps is an interface

      .. code-tab:: typescript

         import { CfnTopicPolicyProps } from '@aws-cdk/aws-sns';



   Properties for defining a `AWS::SNS::TopicPolicy`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html




   .. py:attribute:: policyDocument

      `AWS::SNS::TopicPolicy.PolicyDocument`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: topics

      `AWS::SNS::TopicPolicy.Topics`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-policy.html#cfn-sns-topicpolicy-topics


      :type: string[] *(readonly)*


CfnTopicProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTopicProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.CfnTopicProps;

      .. code-tab:: javascript

         // CfnTopicProps is an interface

      .. code-tab:: typescript

         import { CfnTopicProps } from '@aws-cdk/aws-sns';



   Properties for defining a `AWS::SNS::Topic`.

   http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html




   .. py:attribute:: displayName

      `AWS::SNS::Topic.DisplayName`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-displayname


      :type: string *(optional)* *(readonly)*


   .. py:attribute:: kmsMasterKeyId

      `AWS::SNS::Topic.KmsMasterKeyId`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-kmsmasterkeyid


      :type: string *(optional)* *(readonly)*


   .. py:attribute:: subscription

      `AWS::SNS::Topic.Subscription`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-subscription


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-sns.CfnTopic.SubscriptionProperty`\ )[] *(optional)* *(readonly)*


   .. py:attribute:: topicName

      `AWS::SNS::Topic.TopicName`.

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-sns-topic.html#cfn-sns-topic-topicname


      :type: string *(optional)* *(readonly)*


EmailSubscriptionOptions (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EmailSubscriptionOptions

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.EmailSubscriptionOptions;

      .. code-tab:: javascript

         // EmailSubscriptionOptions is an interface

      .. code-tab:: typescript

         import { EmailSubscriptionOptions } from '@aws-cdk/aws-sns';



   Options for email subscriptions.





   .. py:attribute:: json

      Indicates if the full notification JSON should be sent to the email address or just the message text.



      :type: boolean *(optional)* *(readonly)*
      :default: Message text (false)


ITopic (interface)
^^^^^^^^^^^^^^^^^^

.. py:class:: ITopic

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.ITopic;

      .. code-tab:: javascript

         // ITopic is an interface

      .. code-tab:: typescript

         import { ITopic } from '@aws-cdk/aws-sns';



   :extends: :py:class:`@aws-cdk/cdk.IResource`\ 
   :extends: :py:class:`@aws-cdk/aws-cloudwatch.IAlarmAction`\ 
   :extends: :py:class:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination`\ 
   :extends: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget`\ 


   .. py:attribute:: topicArn

      :type: string *(readonly)*


   .. py:attribute:: topicName

      :type: string *(readonly)*


   .. py:method:: addToResourcePolicy(statement)

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 
      :abstract: Yes


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      Export this Topic.



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :abstract: Yes


   .. py:method:: grantPublish(identity) -> @aws-cdk/aws-iam.Grant

      Grant topic publishing permissions to the given identity.



      :param identity: 
      :type identity: :py:class:`@aws-cdk/aws-iam.IGrantable`\ 
      :rtype: :py:class:`@aws-cdk/aws-iam.Grant`\ 
      :abstract: Yes


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      Return the given named metric for this Topic.



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages published to your Amazon SNS topics.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfNotificationsDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages successfully delivered from your Amazon SNS topics to subscribing endpoints.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfNotificationsFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages that Amazon SNS failed to deliver.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfNotificationsFilteredOut([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages that were rejected by subscription filter policies.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfNotificationsFilteredOutInvalidAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages that were rejected by subscription filter policies because the messages' attributes are invalid.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricNumberOfNotificationsFilteredOutNoMessageAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The number of messages that were rejected by subscription filter policies because the messages have no attributes.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      Metric for the size of messages published through this topic.

      

      Average over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricSMSMonthToDateSpentUSD([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The charges you have accrued since the start of the current calendar month for sending SMS messages.

      

      Maximum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: metricSMSSuccessRate([props]) -> @aws-cdk/aws-cloudwatch.Metric

      The rate of successful SMS message deliveries.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 
      :abstract: Yes


   .. py:method:: subscribe(name, endpoint, protocol, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      Subscribe some endpoint to this topic.



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :param rawMessageDelivery: 
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription.
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: Options to use for email subscription.
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke.
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeQueue(queue, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue.
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: subscribeUrl(name, url, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription.
      :type name: string
      :param url: The URL to invoke.
      :type url: string
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 
      :abstract: Yes


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget <@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget.asLifecycleHookTarget>`

      Called when this object is used as the target of a lifecycle hook.



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 
      :abstract: Yes


   .. py:attribute:: alarmActionArn

      *Inherited from* :py:attr:`@aws-cdk/aws-cloudwatch.IAlarmAction <@aws-cdk/aws-cloudwatch.IAlarmAction.alarmActionArn>`

      Return the ARN that should be used for a CloudWatch Alarm action.



      :type: string *(readonly)*


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Inherited from* :py:meth:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination <@aws-cdk/aws-s3-notifications.IBucketNotificationDestination.asBucketNotificationDestination>`

      Registers this resource to receive notifications for the specified bucket.

      

      This method will only be called once for each destination/bucket

      pair and the result will be cached, so there is no need to implement

      idempotency in each destination.



      :param bucketArn: The ARN of the bucket.
      :type bucketArn: string
      :param bucketId: A unique ID of this bucket in the stack.
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 
      :abstract: Yes


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.IConstruct <@aws-cdk/cdk.IConstruct.node>`

      The construct node in the scope tree.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.IDependable <@aws-cdk/cdk.IDependable.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


Subscription
^^^^^^^^^^^^

.. py:class:: Subscription(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.Subscription;

      .. code-tab:: javascript

         const { Subscription } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { Subscription } from '@aws-cdk/aws-sns';



   A new subscription.

   

   Prefer to use the `ITopic.subscribeXxx()` methods to creating instances of

   this class.



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.SubscriptionProps`\ 

   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis.

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


SubscriptionProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.SubscriptionProps;

      .. code-tab:: javascript

         // SubscriptionProps is an interface

      .. code-tab:: typescript

         import { SubscriptionProps } from '@aws-cdk/aws-sns';



   Properties for creating a new subscription.





   .. py:attribute:: endpoint

      The subscription endpoint.

      

      The meaning of this value depends on the value for 'protocol'.



      :type: any *(readonly)*


   .. py:attribute:: protocol

      What type of subscription to add.



      :type: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\  *(readonly)*


   .. py:attribute:: topic

      The topic to subscribe to.



      :type: :py:class:`~@aws-cdk/aws-sns.ITopic`\  *(readonly)*


   .. py:attribute:: rawMessageDelivery

      true if raw message delivery is enabled for the subscription.

      

      Raw messages are free of JSON formatting and can be

      sent to HTTP/S and Amazon SQS endpoints. For more information, see GetSubscriptionAttributes in the Amazon Simple

      Notification Service API Reference.



      :type: boolean *(optional)* *(readonly)*
      :default: false


SubscriptionProtocol (enum)
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SubscriptionProtocol

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.SubscriptionProtocol;

      .. code-tab:: javascript

         const { SubscriptionProtocol } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { SubscriptionProtocol } from '@aws-cdk/aws-sns';



   The type of subscription, controlling the type of the endpoint parameter.



   .. py:data:: Http

   JSON-encoded message is POSTED to an HTTP url.



   .. py:data:: Https

   JSON-encoded message is POSTed to an HTTPS url.



   .. py:data:: Email

   Notifications are sent via email.



   .. py:data:: EmailJson

   Notifications are JSON-encoded and sent via mail.



   .. py:data:: Sms

   Notification is delivered by SMS.



   .. py:data:: Sqs

   Notifications are enqueued into an SQS queue.



   .. py:data:: Application

   JSON-encoded notifications are sent to a mobile app endpoint.



   .. py:data:: Lambda

   Notifications trigger a Lambda function.




Topic
^^^^^

.. py:class:: Topic(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.Topic;

      .. code-tab:: javascript

         const { Topic } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { Topic } from '@aws-cdk/aws-sns';



   A new SNS topic.



   :extends: :py:class:`~@aws-cdk/aws-sns.TopicBase`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicProps`\ 

   .. py:staticmethod:: import(scope, id, props) -> @aws-cdk/aws-sns.ITopic

      Import a Topic defined elsewhere.



      :param scope: 
      :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param id: 
      :type id: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.ITopic`\ 


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.export`

      Export this Topic.



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 


   .. py:attribute:: autoCreatePolicy

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.autoCreatePolicy`

      Controls automatic creation of policy objects.

      

      Set by subclasses.



      *Protected property*

      :type: boolean *(readonly)*


   .. py:attribute:: topicArn

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.topicArn`

      :type: string *(readonly)*


   .. py:attribute:: topicName

      *Implements* :py:meth:`@aws-cdk/aws-sns.TopicBase.topicName`

      :type: string *(readonly)*


   .. py:method:: addToResourcePolicy(statement)

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.addToResourcePolicy>`

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.asBucketNotificationDestination>`

      Implements the IBucketNotificationDestination interface, allowing topics to be used as bucket notification destinations.



      :param bucketArn: The ARN of the bucket sending the notifications.
      :type bucketArn: string
      :param bucketId: A unique ID of the bucket.
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.asLifecycleHookTarget>`

      Allow using SNS topics as lifecycle hook targets.



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 


   .. py:method:: grantPublish(grantee) -> @aws-cdk/aws-iam.Grant

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.grantPublish>`

      Grant topic publishing permissions to the given identity.



      :param grantee: 
      :type grantee: :py:class:`@aws-cdk/aws-iam.IGrantable`\ 
      :rtype: :py:class:`@aws-cdk/aws-iam.Grant`\ 


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metric>`

      Return the given named metric for this Topic.



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfMessagesPublished>`

      The number of messages published to your Amazon SNS topics.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfNotificationsDelivered>`

      The number of messages successfully delivered from your Amazon SNS topics to subscribing endpoints.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfNotificationsFailed>`

      The number of messages that Amazon SNS failed to deliver.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOut([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfNotificationsFilteredOut>`

      The number of messages that were rejected by subscription filter policies.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOutInvalidAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfNotificationsFilteredOutInvalidAttributes>`

      The number of messages that were rejected by subscription filter policies because the messages' attributes are invalid.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOutNoMessageAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricNumberOfNotificationsFilteredOutNoMessageAttributes>`

      The number of messages that were rejected by subscription filter policies because the messages have no attributes.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricPublishSize>`

      Metric for the size of messages published through this topic.

      

      Average over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricSMSMonthToDateSpentUSD([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricSMSMonthToDateSpentUSD>`

      The charges you have accrued since the start of the current calendar month for sending SMS messages.

      

      Maximum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricSMSSuccessRate([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.metricSMSSuccessRate>`

      The rate of successful SMS message deliveries.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: subscribe(name, endpoint, protocol, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribe>`

      Subscribe some endpoint to this topic.



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :param rawMessageDelivery: 
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeEmail>`

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription.
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: Options for the email delivery format.
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeLambda>`

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke.
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeQueue(queue, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeQueue>`

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue.
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeUrl(name, url, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Inherited from* :py:meth:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.subscribeUrl>`

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription.
      :type name: string
      :param url: The URL to invoke.
      :type url: string
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:attribute:: alarmActionArn

      *Inherited from* :py:attr:`@aws-cdk/aws-sns.TopicBase <@aws-cdk/aws-sns.TopicBase.alarmActionArn>`

      Return the ARN that should be used for a CloudWatch Alarm action.



      :type: string *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis.

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicBase
^^^^^^^^^

.. py:class:: TopicBase(scope, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicBase;

      .. code-tab:: javascript

         const { TopicBase } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { TopicBase } from '@aws-cdk/aws-sns';



   Either a new or imported Topic.



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :implements: :py:class:`~@aws-cdk/aws-sns.ITopic`\ 
   :abstract: Yes
   :param scope: The scope in which to define this construct.
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: The scoped construct ID.. . Must be unique amongst siblings. If the ID includes a path separator (`/`), then it will be replaced by double dash `--`.
   :type id: string

   .. py:method:: addToResourcePolicy(statement)

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.addToResourcePolicy`

      Adds a statement to the IAM resource policy associated with this topic.

      

      If this topic was created in this stack (`new Topic`), a topic policy

      will be automatically created upon the first call to `addToPolicy`. If

      the topic is improted (`Topic.import`), then this is a no-op.



      :param statement: 
      :type statement: :py:class:`@aws-cdk/aws-iam.PolicyStatement`\ 


   .. py:method:: asBucketNotificationDestination(bucketArn, bucketId) -> @aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps

      *Implements* :py:meth:`@aws-cdk/aws-s3-notifications.IBucketNotificationDestination.asBucketNotificationDestination`

      Implements the IBucketNotificationDestination interface, allowing topics to be used as bucket notification destinations.



      :param bucketArn: The ARN of the bucket sending the notifications.
      :type bucketArn: string
      :param bucketId: A unique ID of the bucket.
      :type bucketId: string
      :rtype: :py:class:`@aws-cdk/aws-s3-notifications.BucketNotificationDestinationProps`\ 


   .. py:method:: asLifecycleHookTarget(lifecycleHook) -> @aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps

      *Implements* :py:meth:`@aws-cdk/aws-autoscaling-api.ILifecycleHookTarget.asLifecycleHookTarget`

      Allow using SNS topics as lifecycle hook targets.



      :param lifecycleHook: 
      :type lifecycleHook: :py:class:`@aws-cdk/aws-autoscaling-api.ILifecycleHook`\ 
      :rtype: :py:class:`@aws-cdk/aws-autoscaling-api.LifecycleHookTargetProps`\ 


   .. py:method:: export() -> @aws-cdk/aws-sns.TopicImportProps

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.export`

      Export this Topic.



      :rtype: :py:class:`~@aws-cdk/aws-sns.TopicImportProps`\ 
      :abstract: Yes


   .. py:method:: grantPublish(grantee) -> @aws-cdk/aws-iam.Grant

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.grantPublish`

      Grant topic publishing permissions to the given identity.



      :param grantee: 
      :type grantee: :py:class:`@aws-cdk/aws-iam.IGrantable`\ 
      :rtype: :py:class:`@aws-cdk/aws-iam.Grant`\ 


   .. py:method:: metric(metricName, [props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metric`

      Return the given named metric for this Topic.



      :param metricName: 
      :type metricName: string
      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfMessagesPublished([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfMessagesPublished`

      The number of messages published to your Amazon SNS topics.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsDelivered([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfNotificationsDelivered`

      The number of messages successfully delivered from your Amazon SNS topics to subscribing endpoints.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFailed([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfNotificationsFailed`

      The number of messages that Amazon SNS failed to deliver.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOut([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfNotificationsFilteredOut`

      The number of messages that were rejected by subscription filter policies.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOutInvalidAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfNotificationsFilteredOutInvalidAttributes`

      The number of messages that were rejected by subscription filter policies because the messages' attributes are invalid.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricNumberOfNotificationsFilteredOutNoMessageAttributes([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricNumberOfNotificationsFilteredOutNoMessageAttributes`

      The number of messages that were rejected by subscription filter policies because the messages have no attributes.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricPublishSize([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricPublishSize`

      Metric for the size of messages published through this topic.

      

      Average over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricSMSMonthToDateSpentUSD([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricSMSMonthToDateSpentUSD`

      The charges you have accrued since the start of the current calendar month for sending SMS messages.

      

      Maximum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: metricSMSSuccessRate([props]) -> @aws-cdk/aws-cloudwatch.Metric

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.metricSMSSuccessRate`

      The rate of successful SMS message deliveries.

      

      Sum over 5 minutes



      :param props: 
      :type props: :py:class:`@aws-cdk/aws-cloudwatch.MetricOptions`\ 
      :rtype: :py:class:`@aws-cdk/aws-cloudwatch.Metric`\ 


   .. py:method:: subscribe(name, endpoint, protocol, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribe`

      Subscribe some endpoint to this topic.



      :param name: 
      :type name: string
      :param endpoint: 
      :type endpoint: string
      :param protocol: 
      :type protocol: :py:class:`~@aws-cdk/aws-sns.SubscriptionProtocol`\ 
      :param rawMessageDelivery: 
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeEmail(name, emailAddress, [options]) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeEmail`

      Defines a subscription from this SNS topic to an email address.



      :param name: A name for the subscription.
      :type name: string
      :param emailAddress: The email address to use.
      :type emailAddress: string
      :param options: Options for the email delivery format.
      :type options: :py:class:`~@aws-cdk/aws-sns.EmailSubscriptionOptions`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeLambda(lambdaFunction) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeLambda`

      Defines a subscription from this SNS Topic to a Lambda function.

      

      The Lambda's resource policy will be updated to allow this topic to

      invoke the function.



      :param lambdaFunction: The Lambda function to invoke.
      :type lambdaFunction: :py:class:`@aws-cdk/aws-lambda.IFunction`\ 
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeQueue(queue, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeQueue`

      Defines a subscription from this SNS topic to an SQS queue.

      

      The queue resource policy will be updated to allow this SNS topic to send

      messages to the queue.



      :param queue: The target queue.
      :type queue: :py:class:`@aws-cdk/aws-sqs.IQueue`\ 
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:method:: subscribeUrl(name, url, [rawMessageDelivery]) -> @aws-cdk/aws-sns.Subscription

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.subscribeUrl`

      Defines a subscription from this SNS topic to an http:// or https:// URL.



      :param name: A name for the subscription.
      :type name: string
      :param url: The URL to invoke.
      :type url: string
      :param rawMessageDelivery: Enable raw message delivery.
      :type rawMessageDelivery: boolean
      :rtype: :py:class:`~@aws-cdk/aws-sns.Subscription`\ 


   .. py:attribute:: alarmActionArn

      *Implements* :py:meth:`@aws-cdk/aws-cloudwatch.IAlarmAction.alarmActionArn`

      Return the ARN that should be used for a CloudWatch Alarm action.



      :type: string *(readonly)*


   .. py:attribute:: autoCreatePolicy

      Controls automatic creation of policy objects.

      

      Set by subclasses.



      *Protected property*

      :type: boolean *(readonly)* *(abstract)*


   .. py:attribute:: topicArn

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.topicArn`

      :type: string *(readonly)* *(abstract)*


   .. py:attribute:: topicName

      *Implements* :py:meth:`@aws-cdk/aws-sns.ITopic.topicName`

      :type: string *(readonly)* *(abstract)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis.

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicImportProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicImportProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicImportProps;

      .. code-tab:: javascript

         // TopicImportProps is an interface

      .. code-tab:: typescript

         import { TopicImportProps } from '@aws-cdk/aws-sns';



   Reference to an external topic.





   .. py:attribute:: topicArn

      :type: string *(readonly)*


   .. py:attribute:: topicName

      :type: string *(readonly)*


TopicPolicy
^^^^^^^^^^^

.. py:class:: TopicPolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicPolicy;

      .. code-tab:: javascript

         const { TopicPolicy } = require('@aws-cdk/aws-sns');

      .. code-tab:: typescript

         import { TopicPolicy } from '@aws-cdk/aws-sns';



   Applies a policy to SNS topics.



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-sns.TopicPolicyProps`\ 

   .. py:attribute:: document

      The IAM policy document for this policy.



      :type: :py:class:`@aws-cdk/aws-iam.PolicyDocument`\  *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis.

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable.

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TopicPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicPolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicPolicyProps;

      .. code-tab:: javascript

         // TopicPolicyProps is an interface

      .. code-tab:: typescript

         import { TopicPolicyProps } from '@aws-cdk/aws-sns';





   .. py:attribute:: topics

      The set of topics this policy applies to.



      :type: :py:class:`~@aws-cdk/aws-sns.ITopic`\ [] *(readonly)*


TopicProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TopicProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SNS;

      .. code-tab:: java

         import software.amazon.awscdk.services.sns.TopicProps;

      .. code-tab:: javascript

         // TopicProps is an interface

      .. code-tab:: typescript

         import { TopicProps } from '@aws-cdk/aws-sns';



   Properties for a new SNS topic.





   .. py:attribute:: displayName

      A developer-defined string that can be used to identify this SNS topic.



      :type: string *(optional)* *(readonly)*
      :default: None


   .. py:attribute:: topicName

      A name for the topic.

      

      If you don't specify a name, AWS CloudFormation generates a unique

      physical ID and uses that ID for the topic name. For more information,

      see Name Type.



      :type: string *(optional)* *(readonly)*
      :default: Generated name


